--- a/src/main/resources/assets/slotmachinemod/lang/en_us.json
+++ b/src/main/resources/assets/slotmachinemod/lang/en_us.json
@@ -1,5 +1,7 @@
 {
   "block.slotmachinemod.slot_machine": "Slot Machine",
   "slots.gui.stop": "Stop",
-    "slots.gui.spin": "Spin!"
+  "slots.gui.spin": "Spin!",
+
+  "block.slotmachinemod.bj_machine": "Blackjack Machine"
 }
